--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "google-auth-library": "^7.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.5",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15"
   }
 }
