--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.5",
     "nodemailer": "^6.7.2",
+    "nodemailer-sendgrid": "^1.0.3",
     "nodemon": "^2.0.15"
   }
 }
