--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "google-auth-library": "^7.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.5",
-    "nodemailer": "^6.7.2",
+    "nodemailer": "^6.7.5",
     "nodemailer-sendgrid": "^1.0.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "uuid": "^8.3.2"
   }
 }
